--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,42 +8,33 @@
 
 <div class="sidebar-wrapper">
   <ul class="nav">
-    <li *ngFor="let menuItem of menuItems" [class]="menuItem.class">
-
-      <!-- Header Item -->
-      <ng-container *ngIf="menuItem.type === 'header'">
-        <h6 class="nav-header">{{ menuItem.title }}</h6>
+    <li *ngFor="let menuItem of menuItems">
+      <!-- Mục đơn không có children -->
+      <ng-container *ngIf="!menuItem.children">
+        <a [routerLink]="[menuItem.path]" routerLinkActive="active">
+          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
+          <span>{{menuItem.title}}</span>
+        </a>
       </ng-container>
 
-      <!-- Link Item -->
-      <ng-container *ngIf="menuItem.type === 'link'">
-        <!-- Item without children -->
-        <ng-container *ngIf="!menuItem.children">
-          <a [routerLink]="[menuItem.path]" routerLinkActive="active">
-            <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
-            <span>{{ menuItem.title }}</span>
-          </a>
-        </ng-container>
-
-        <!-- Item with children -->
-        <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
-          <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
-            <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
-            <span>{{ menuItem.title }}</span>
-            <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
-          </a>
-          <ul class="nav sub-menu" *ngIf="menuItem.expanded">
-            <li *ngFor="let child of menuItem.children">
-              <a [routerLink]="[child.path]" routerLinkActive="active">
-                <span class="nav-icon" *ngIf="child.svg" [innerHTML]="child.svg | safe: 'html'"></span>
-                <span *ngIf="!child.svg" class="nav-icon-placeholder"></span>
-                <span>{{ child.title }}</span>
-              </a>
-            </li>
-          </ul>
-        </ng-container>
+      <!-- Mục có children -->
+      <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
+        <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
+          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
+          <span>{{menuItem.title}}</span>
+          <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
+        </a>
+        <ul class="nav sub-menu" *ngIf="menuItem.expanded">
+          <li *ngFor="let child of menuItem.children">
+            <a [routerLink]="[child.path]" routerLinkActive="active">
+              <!-- For child items, we can use a placeholder or specific icons if available -->
+              <span class="nav-icon" *ngIf="child.svg" [innerHTML]="child.svg | safe: 'html'"></span>
+              <span *ngIf="!child.svg" class="nav-icon-placeholder"></span> <!-- Placeholder for alignment -->
+              <span>{{child.title}}</span>
+            </a>
+          </li>
+        </ul>
       </ng-container>
-
     </li>
   </ul>
 </div>
