--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
             <div>
               <p class="text-uppercase small mb-1">Work Order</p>
               <h3 class="fw-bold">{{ workOrder }}</h3>
-              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> 3.2% This month</p>
+              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;"></i> This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
               <i class="material-icons text-success">assignment</i>
@@ -25,7 +25,7 @@
             <div>
               <p class="text-uppercase small mb-1">Shipment</p>
               <h3 class="fw-bold">{{ shipment }}</h3>
-              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> 2.4% This month</p>
+              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i>This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
               <i class="material-icons text-warning">inventory</i>
@@ -41,7 +41,7 @@
             <div>
               <p class="text-uppercase small mb-1">OTD</p>
               <h3 class="fw-bold">100%</h3>
-              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> 0.0% This month</p>
+              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
               <i class="material-icons text-info">check_circle</i>
@@ -57,7 +57,7 @@
             <div>
               <p class="text-uppercase small mb-1">Safety</p>
               <h3 class="fw-bold">100%</h3>
-              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> 0.0% Since Dec-2018</p>
+              <p class="text-white-50 small"><i class="material-icons text-success" style="font-size: 16px;">arrow_upward</i> Since Dec-2018</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
               <i class="material-icons text-danger">health_and_safety</i>
