--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
               <p class="text-muted small">This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
-              <i class="material-icons text-warning">inventory</i>
+              <i class="material-icons text-warning">conveyor_belt</i>
             </div>
           </div>
         </div>
