--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -147,3 +147,8 @@
 .col-lg-3.col-md-6.col-sm-6 .card .rounded-circle .material-icons {
   font-size: 36px;
 }
+
+/* Increase font size for KPI titles */
+.col-lg-3.col-md-6.col-sm-6 .card p.text-uppercase.small {
+  font-size: 1.3rem;
+}
