--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -144,7 +144,7 @@
 }
 
 /* Make top card icons 50% larger */
-.col-lg-3.col-md-6.col-sm-6 .card .rounded-circle .material-icons {
+.col-lg-3.col-md-6.col-sm-6 .card .rounded-circle i {
   font-size: 36px;
 }
 
