--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -148,6 +148,11 @@
   font-size: 36px;
 }
 
+/* Ensure Nucleo Icons are displayed correctly */
+.ni {
+  font-family: 'nucleo-icons' !important;
+}
+
 /* Increase font size for KPI titles */
 .col-lg-3.col-md-6.col-sm-6 .card p.text-uppercase.small {
   font-size: 1.3rem;
