--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -144,13 +144,8 @@
 }
 
 /* Make top card icons 50% larger */
-.col-lg-3.col-md-6.col-sm-6 .card .rounded-circle i {
+.col-lg-3.col-md-6.col-sm-6 .card .rounded-circle .material-icons {
   font-size: 36px;
-}
-
-/* Ensure Nucleo Icons are displayed correctly */
-.ni {
-  font-family: 'nucleo-icons' !important;
 }
 
 /* Increase font size for KPI titles */
