--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
               <p class="text-muted small">This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
-              <i class="ni ni-collection text-success"></i>
+              <i class="material-icons text-success">assignment</i>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
               <p class="text-muted small">This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
-              <i class="ni ni-delivery-fast text-warning"></i>
+              <i class="material-icons text-warning">conveyor_belt</i>
             </div>
           </div>
         </div>
@@ -44,7 +44,7 @@
               <p class="text-muted small">This month</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
-              <i class="ni ni-check-bold text-info"></i>
+              <i class="material-icons text-info">check_circle</i>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
               <p class="text-muted small">Since Dec-2018</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
-              <i class="ni ni-shield-check text-danger"></i>
+              <i class="material-icons text-danger">health_and_safety</i>
             </div>
           </div>
         </div>
