--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -162,7 +162,7 @@
             <p class="card-category">Status for the next 7 days</p>
           </div>
           <div class="card-body table-responsive">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped workorder-status-table">
               <thead>
                 <tr>
                   <th>Ship Date</th>
