--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,35 +1,37 @@
-<div class="logo">
-  <a href="https://www.airspeedllc.com/" class="simple-text logo-mini">
-    <div class="logo-img">
-      <img src="assets/img/logo.png" alt="Logo" />
-    </div>
-  </a>
-</div>
-
 <div class="sidebar-wrapper">
+  <div class="logo">
+    <a href="https://www.airspeedllc.com/" class="simple-text logo-mini">
+      <div class="logo-img">
+        <img src="assets/img/logo.png" alt="Logo" />
+      </div>
+    </a>
+  </div>
+
   <ul class="nav">
-    <li *ngFor="let menuItem of menuItems">
-      <!-- Mục đơn không có children -->
+    <li *ngFor="let menuItem of menuItems" [ngClass]="{'active': menuItem.expanded}">
+      <!-- Parent item -->
       <ng-container *ngIf="!menuItem.children">
         <a [routerLink]="[menuItem.path]" routerLinkActive="active">
+          <i *ngIf="menuItem.icon" class="material-icons">{{menuItem.icon}}</i>
           <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
           <span>{{menuItem.title}}</span>
         </a>
       </ng-container>
 
-      <!-- Mục có children -->
+      <!-- Item with children -->
       <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
         <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
+          <i *ngIf="menuItem.icon" class="material-icons">{{menuItem.icon}}</i>
           <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
           <span>{{menuItem.title}}</span>
           <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
         </a>
-        <ul class="nav sub-menu" *ngIf="menuItem.expanded">
+        <ul class="sub-menu" [@slideToggle]="menuItem.expanded ? 'in' : 'out'">
           <li *ngFor="let child of menuItem.children">
             <a [routerLink]="[child.path]" routerLinkActive="active">
-              <!-- For child items, we can use a placeholder or specific icons if available -->
+              <i *ngIf="child.icon" class="material-icons">{{child.icon}}</i>
               <span class="nav-icon" *ngIf="child.svg" [innerHTML]="child.svg | safe: 'html'"></span>
-              <span *ngIf="!child.svg" class="nav-icon-placeholder"></span> <!-- Placeholder for alignment -->
+              <span *ngIf="!child.svg && !child.icon" class="nav-icon-placeholder"></span> <!-- Placeholder for alignment -->
               <span>{{child.title}}</span>
             </a>
           </li>
