--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -158,8 +158,8 @@
       <div class="col-lg-6 col-md-12">
         <div class="card">
           <div class="card-header card-header-warning">
-            <h4 class="card-title">Shipment Status</h4>
-            <p class="card-category">Status for the next 7 days</p>
+            <h4 class="custom-card-title">Shipment Status</h4>
+            <p class="custom-card-desc">Status for the next 7 days</p>
           </div>
           <div class="card-body table-responsive">
             <table class="table table-bordered table-striped workorder-status-table">
