--- a/src/app/pages/layout-3d/layout-3d.component.scss
+++ b/src/app/pages/layout-3d/layout-3d.component.scss
@@ -1,11 +1,20 @@
 :host {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 }
 
+.search-container {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+}
+
 .renderer-container {
+    flex-grow: 1;
     width: 100%;
-    height: 100%;
     display: block;
 } 
