--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -6,4 +6,4 @@
     <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
 </div>
 
-<div #rendererContainer class="renderer-container"></div> 
+<div #rendererContainer id="rendererContainer"></div> 
