--- a/src/app/pages/layout-3d/layout-3d.component.scss
+++ b/src/app/pages/layout-3d/layout-3d.component.scss
@@ -11,7 +11,7 @@
     min-height: 80vh;
     position: relative;
     display: block;
-    border: 5px solid red;
+    /* border: 5px solid red; */ /* No longer needed */
 }
 
 .search-container {
