--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,7 +1,6 @@
 <div class="search-container">
-    <mat-form-field appearance="fill">
-        <mat-label>Enter Item Code to Find</mat-label>
-        <input matInput #searchInput placeholder="e.g., B001013">
+    <mat-form-field>
+        <input matInput #searchInput placeholder="Enter Item or Shelf Code">
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
 </div>
