--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,8 +1,1 @@
-<div class="search-container">
-    <mat-form-field>
-        <input matInput #searchInput placeholder="Enter Item or Shelf Code">
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
-</div>
-
-<div #rendererContainer id="rendererContainer"></div> 
+<div #rendererContainer class="renderer-container"></div> 
