--- a/src/app/pages/layout-3d/layout-3d.component.scss
+++ b/src/app/pages/layout-3d/layout-3d.component.scss
@@ -3,4 +3,5 @@
     height: 100%;
     min-height: 80vh; /* Ensure it has a substantial height */
     display: block;
+    border: 5px solid red; /* --- Add this for diagnostics --- */
 } 
