--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,2 +1,4 @@
 <h1>Đây là trang Layout 3D</h1>
-<p>Nếu bạn thấy dòng chữ này, component đã được tải thành công.</p> 
+<p>Nếu bạn thấy dòng chữ này, component đã được tải thành công.</p>
+
+<div #rendererContainer class="renderer-container"></div> 
