--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,4 +1,13 @@
-<h1>Đây là trang Layout 3D</h1>
-<p>Nếu bạn thấy dòng chữ này, component đã được tải thành công.</p>
-
-<div #rendererContainer class="renderer-container"></div> 
+<div class="main-content">
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-header card-header-danger">
+        <h4 class="card-title">3D Layout</h4>
+        <p class="card-category">Warehouse 3D Layout Visualization</p>
+      </div>
+      <div class="card-body">
+        <div #rendererContainer style="width: 100%; height: 600px;"></div>
+      </div>
+    </div>
+  </div>
+</div> 
