--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,13 +1,8 @@
-<div class="main-content">
-  <div class="container-fluid">
-    <div class="card">
-      <div class="card-header card-header-danger">
-        <h4 class="card-title">3D Layout</h4>
-        <p class="card-category">Warehouse 3D Layout Visualization</p>
-      </div>
-      <div class="card-body">
-        <div #rendererContainer style="width: 100%; height: 600px;"></div>
-      </div>
-    </div>
-  </div>
-</div> 
+<div class="search-container">
+    <mat-form-field>
+        <input matInput #searchInput placeholder="Enter Item or Shelf Code">
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
+</div>
+
+<div #rendererContainer id="rendererContainer"></div> 
