--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,6 +1,6 @@
 <div class="search-container">
     <mat-form-field>
-        <input matInput #searchInput placeholder="Enter Item or Shelf Code">
+        <input matInput #searchInput placeholder="Enter item" (keyup.enter)="findShelf(searchInput.value)" (input)="searchInput.value = searchInput.value.toUpperCase()">
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
 </div>
