--- a/src/app/pages/layout-3d/layout-3d.component.scss
+++ b/src/app/pages/layout-3d/layout-3d.component.scss
@@ -1,6 +1,6 @@
 #rendererContainer {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 120px);
   min-height: 85vh; /* Give it a substantial height */
   position: relative;
   display: block;
@@ -8,7 +8,7 @@
 
 .search-container {
   position: absolute;
-  top: 80px;
+  top: 20px;
   left: 20px;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
