--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -73,7 +73,7 @@
         <div class="card card-chart">
           <div class="card-body">
             <h4 class="card-title d-flex align-items-center">
-              <i class="material-icons me-2 text-success animate-icon" style="background-color: #e8f5e9; padding: 6px; border-radius: 8px;">inventory_2</i> % Materials Accuracy
+              <i class="material-icons me-2 text-success animate-icon" style="background-color: #e8f5e9; padding: 6px; border-radius: 8px;">inventory_2</i> Materials Accuracy
             </h4>
             <canvas id="dailySalesChart"></canvas>
             <p class="text-muted mt-2">Data last 6 months</p>
@@ -90,7 +90,7 @@
         <div class="card card-chart">
           <div class="card-body">
             <h4 class="card-title d-flex align-items-center">
-              <i class="material-icons me-2 text-warning animate-icon" style="background-color: #fff3e0; padding: 6px; border-radius: 8px;">inventory</i> % Finished Goods Accuracy
+              <i class="material-icons me-2 text-warning animate-icon" style="background-color: #fff3e0; padding: 6px; border-radius: 8px;">inventory</i> Finished Goods Accuracy
             </h4>
             <canvas id="websiteViewsChart"></canvas>
             <p class="text-muted mt-2">Data last 6 months</p>
