--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,33 +1,7 @@
-<footer class="footer ">
+<footer class="footer">
     <div class="container-fluid">
-        <nav class="pull-left">
-            <ul>
-                <li>
-                    <a href="#">
-                        AIRSPEED MANUFACTURING WAREHOUSE
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.airspeedllc.com/">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.airspeedllc.com/">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.airspeedllc.com/">
-                        Licenses
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="copyright pull-right">
-            &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.airspeedllc.com/" target="_blank">VN TEAM</a> for a better web.
-        </div>
+        <p class="copyright pull-right">
+            &copy; {{test | date: 'yyyy'}}, made with love by VN TEAM for a better web.
+        </p>
     </div>
 </footer>
