--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,32 +8,11 @@
 
 <div class="sidebar-wrapper">
   <ul class="nav">
-    <li *ngFor="let menuItem of menuItems">
-      <!-- Item without children -->
-      <ng-container *ngIf="!menuItem.children">
-        <a [routerLink]="[menuItem.path]" routerLinkActive="active">
-          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
-          <span>{{menuItem.title}}</span>
-        </a>
-      </ng-container>
-
-      <!-- Item with children -->
-      <ng-container *ngIf="menuItem.children && menuItem.children.length > 0">
-        <a href="#" (click)="menuItem.expanded = !menuItem.expanded; $event.preventDefault()">
-          <span class="nav-icon" *ngIf="menuItem.svg" [innerHTML]="menuItem.svg | safe: 'html'"></span>
-          <span>{{menuItem.title}}</span>
-          <i class="material-icons expand-icon">{{ menuItem.expanded ? 'expand_less' : 'expand_more' }}</i>
-        </a>
-        <ul class="nav sub-menu" *ngIf="menuItem.expanded">
-          <li *ngFor="let child of menuItem.children">
-            <a [routerLink]="[child.path]" routerLinkActive="active">
-              <span class="nav-icon" *ngIf="child.svg" [innerHTML]="child.svg | safe: 'html'"></span>
-              <span *ngIf="!child.svg" class="nav-icon-placeholder"></span> <!-- Placeholder for alignment -->
-              <span>{{child.title}}</span>
-            </a>
-          </li>
-        </ul>
-      </ng-container>
+    <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+      <a class="nav-link" [routerLink]="[menuItem.path]">
+          <i class="material-icons">{{menuItem.icon}}</i>
+          <p>{{menuItem.title}}</p>
+      </a>
     </li>
   </ul>
 </div>
