--- a/src/assets/scss/core/_type.scss
+++ b/src/assets/scss/core/_type.scss
@@ -3,12 +3,20 @@ html * {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+body {
   font-family: $font-family-sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5em;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+  font-family: $font-family-sans-serif;
+  line-height: 1.5em;
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+    font-weight: 700;
+}
 
 h1, .h1 {
     font-size: $font-size-h1;
@@ -22,10 +30,12 @@ h3, .h3{
     line-height: 1.4em;
     margin: 20px 0 10px;
 }
+h4, .h4, h5, .h5 {
+    font-weight: 500;
+}
 h4, .h4{
     font-size: $font-size-h4;
     line-height: 1.4em;
-    font-weight: 300;
 }
 h5, .h5 {
     font-size: $font-size-h5;
