--- a/src/app/pages/layout-3d/layout-3d.component.html
+++ b/src/app/pages/layout-3d/layout-3d.component.html
@@ -1,8 +1,20 @@
-<div class="search-container">
-    <mat-form-field>
-        <input matInput #searchInput placeholder="Enter item" (keyup.enter)="findShelf(searchInput.value)" (input)="searchInput.value = searchInput.value.toUpperCase()">
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="findShelf(searchInput.value)">Find</button>
-</div>
-
-<div #rendererContainer id="rendererContainer"></div> 
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="search-controls">
+            <mat-form-field class="item-search-field">
+                <input matInput #searchInput 
+                        placeholder="{{ dataLoaded ? 'Enter item' : 'Loading...' }}" 
+                        (keyup.enter)="findShelf(searchInput.value)" 
+                        (input)="searchInput.value = searchInput.value.toUpperCase()"
+                        [disabled]="!dataLoaded">
+            </mat-form-field>
+            <button mat-raised-button class="btn btn-info find-button" 
+                    (click)="findShelf(searchInput.value)" 
+                    [disabled]="!dataLoaded">Find</button>
+        </div>
+        <div class="search-message" *ngIf="searchMessage">
+            <p [innerHTML]="searchMessage"></p>
+        </div>
+        <div #rendererContainer class="renderer-container"></div>
+    </div>
+</div> 
