--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
     <div class="sidebar">
         <app-sidebar></app-sidebar>
+        <div class="sidebar-background"></div>
     </div>
     <div class="main-panel">
         <app-navbar *ngIf="shouldShowNavbar()"></app-navbar>
