--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -21,7 +21,7 @@
 
 .toolbar {
     padding: 10px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     flex-shrink: 0; /* Prevent toolbar from shrinking */
     display: flex;
     align-items: center;
